--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ Options +FollowSymLinks
 Options +Indexes
 <IfModule mod_rewrite.c>
 	RewriteEngine On
-	RewriteBase /freeder/
+	RewriteBase /Freeder/
 	RewriteRule ^tag/(.+)$ index.php?view=\$tag_$1
 	RewriteRule ^feed/(.+)$ index.php?view=\$feed_$1
 </IfModule>
