--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -2,8 +2,8 @@ FROM debian:stable
 MAINTAINER Niols <niols@niols.net>
 
 # Install packages
-RUN apt-get update
-RUN apt-get install apache2 apache2-utils php5 php5-dev php5-sqlite php5-curl
+RUN apt-get update -y
+RUN apt-get install -y apache2 apache2-utils php5 php5-dev php5-sqlite php5-curl
 
 # Configure the database
 ADD init.sh /tmp/init.sh
@@ -11,7 +11,7 @@ RUN chmod 775 /tmp/init.sh
 RUN rm /tmp/init.sh
 
 # Get Freeder
-RUN apt-get install git
+RUN apt-get install -y git
 RUN git clone https://github.com/Niols/Freeder /var/www/Freeder
 
 # apache user has UID 1000 and GID 100
