--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=homestead
 # DB_PASSWORD=secret
 
-CACHE_DRIVER=memcached
-SESSION_DRIVER=memcached
+CACHE_DRIVER=array
+SESSION_DRIVER=cookie
 QUEUE_DRIVER=database
 
 # MAIL_DRIVER=smtp
