--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
         "vlucas/phpdotenv": "~1.0",
-        "league/fractal": "^0.13.0"
+        "league/fractal": "^0.13.0",
+        "fguillot/picofeed": "^0.1.16",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
